Reduce size of bug reports

--- a/LearnOnTheGo.WP8/MainPage.xaml
+++ b/LearnOnTheGo.WP8/MainPage.xaml
@@ -129,6 +129,7 @@
         </controls:Pivot>
 
         <TextBlock x:Name="messageTextBlock" 
+                   Margin="24,0,12,0"
                    TextWrapping="Wrap"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center" />
