--- a/LearnOnTheGo.WP8/CoursePage.xaml
+++ b/LearnOnTheGo.WP8/CoursePage.xaml
@@ -111,6 +111,7 @@
         </controls:Pivot>
 
         <TextBlock x:Name="messageTextBlock" 
+                   Margin="24,0,12,0"
                    TextWrapping="Wrap"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center" />
