Reduce size of bug reports + update screenshots

--- a/UKTrains.WP8/MainAndFilterPage.xaml
+++ b/UKTrains.WP8/MainAndFilterPage.xaml
@@ -42,7 +42,7 @@
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
 
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid Background="Transparent">
 
         <Grid.Resources>
 
