--- a/UKTrains.WP8/MainAndFilterPage.xaml
+++ b/UKTrains.WP8/MainAndFilterPage.xaml
@@ -6,8 +6,9 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:coding4funConverters="clr-namespace:Coding4Fun.Toolkit.Controls.Converters;assembly=Coding4Fun.Toolkit.Controls"
-    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"    
     xmlns:watermark="clr-namespace:CS.Windows.Controls;assembly=CS.Windows.Controls"
+    xmlns:src="clr-namespace:UKTrains"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:nationalRail="clr-namespace:NationalRail;assembly=NationalRail"
@@ -47,6 +48,7 @@
         <Grid.Resources>
 
             <coding4funConverters:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
+            <src:DistanceToStringConverter x:Key="distanceToStringConverter" />
 
             <DataTemplate x:Key="stationTemplateWithDistance">
                 <Button Tap="OnStationClick">
@@ -58,7 +60,7 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Text="{Binding Item1}"                                           
+                                <TextBlock Text="{Binding Item1, Converter={StaticResource distanceToStringConverter}}"
                                            Margin="0,12,0,0"
                                            Foreground="{StaticResource PhoneAccentBrush}" />
                                 <TextBlock Text="{Binding Item2.Name}"
