--- a/UKTrains.WP8/StationPage.xaml
+++ b/UKTrains.WP8/StationPage.xaml
@@ -54,6 +54,21 @@
                                         Delayed="Orange"
                                         OnTime="{StaticResource PhoneForegroundBrush}" />
             <src:StatusToVisibilityConverter x:Key="statusToVisibilityConverter" />
+
+            <src:JourneyElementStatusToColorConverter x:Key="journeyStatusToColorConverterMessage" 
+                                                      Cancelled="Red"
+                                                      Delayed="Orange"
+                                                      NoReport="Orange"
+                                                      OnTime="{StaticResource PhoneForegroundBrush}" />
+
+            <src:JourneyElementStatusToColorConverter x:Key="journeyStatusToColorConverterTime" 
+                                                      Cancelled="Red"
+                                                      Delayed="Orange"
+                                                      NoReport="Orange"
+                                                      OnTime="{StaticResource PhoneAccentBrush}" />
+
+            <src:ArrivalInformationToMessageConverter x:Key="arrivalInformationToMessageConverter" />
+            
             
             <DataTemplate x:Key="departureTemplate">
                 <Button Tap="OnLiveProgressClick">
@@ -68,6 +83,7 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
@@ -112,6 +128,19 @@
                                            FontSize="{StaticResource PhoneFontSizeSmall}"
                                            Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
                                            Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}" />
+                                <TextBlock Text="{Binding Arrival.Value.Value.Expected}" 
+                                           Visibility="{Binding ArrivalIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
+                                           Foreground="{Binding Arrival.Value.Value.Status, Converter={StaticResource journeyStatusToColorConverterTime}}"
+                                           Grid.Row="3" 
+                                           HorizontalAlignment="Right"
+                                           FontSize="{StaticResource PhoneFontSizeSmall}" />
+                                <TextBlock Text="{Binding Arrival.Value.Value, Converter={StaticResource arrivalInformationToMessageConverter}}"
+                                           Visibility="{Binding ArrivalIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
+                                           Foreground="{Binding Arrival.Value.Value.Status, Converter={StaticResource journeyStatusToColorConverterMessage}}"
+                                           TextWrapping="Wrap"
+                                           Grid.Column="2"
+                                           Grid.Row="3"                                            
+                                           FontSize="{StaticResource PhoneFontSizeSmall}" />
                             </Grid>
                         </ControlTemplate>
                     </Button.Template>
