--- a/LearnOnTheGo.WP8/CoursePage.xaml
+++ b/LearnOnTheGo.WP8/CoursePage.xaml
@@ -91,7 +91,7 @@
                                FontSize="{StaticResource PhoneFontSizeLarge}"
                                Margin="12,0,12,12"
                                TextWrapping="Wrap" />
-                    <ScrollViewer Grid.Row="1">
+                    <ScrollViewer Grid.Row="1" ManipulationStarted="OnScrollViewerManipulationStarted">
                         <ItemsControl ItemsSource="{Binding Lectures}"
                                       ItemTemplate="{StaticResource lectureTemplate}" />
                     </ScrollViewer>
@@ -100,6 +100,7 @@
         </Grid.Resources>
 
         <controls:Pivot x:Name="pivot" 
+                        SelectionChanged="OnPivotSelectionChanged"
                         Title="{Binding CourseTitle}"
                         ItemsSource="{Binding LectureSections}"
                         ItemTemplate="{StaticResource sectionTemplate}">
