--- a/LearnOnTheGo.WP8/MainPage.xaml
+++ b/LearnOnTheGo.WP8/MainPage.xaml
@@ -10,6 +10,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:coursera="clr-namespace:Coursera;assembly=Coursera"
+    xmlns:adduplex="clr-namespace:AdDuplex;assembly=AdDuplex.WindowsPhone"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -42,7 +43,12 @@
     </toolkit:TransitionService.NavigationOutTransition>
 
     <Grid Background="Transparent">
-        
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
         <Grid.Resources>
 
             <coding4funConverters:StringToVisibilityConverter x:Key="stringToVisibilityConverter" />
@@ -133,6 +139,20 @@
                    TextWrapping="Wrap"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center" />
+
+        <Grid Grid.Row="1" Margin="0,0,0,-1">
+            <adduplex:AdControl AppId="57903">
+                <adduplex:AdControl.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleX="1.005" />
+                        <TranslateTransform X="-1" />
+                    </TransformGroup>
+                </adduplex:AdControl.RenderTransform>
+            </adduplex:AdControl>
+            <Border BorderThickness="0,1,0,0"
+                    BorderBrush="{StaticResource PhoneBackgroundBrush}" />
+        </Grid>
+
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
