--- a/UKTrains.WP8/LiveProgressPage.xaml
+++ b/UKTrains.WP8/LiveProgressPage.xaml
@@ -10,7 +10,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:src="clr-namespace:UKTrains"
-    xmlns:nationalRail="clr-namespace:NationalRail;assembly=NationalRail"
+    xmlns:Trains="clr-namespace:Trains;assembly=Trains"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -18,7 +18,7 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
     toolkit:TiltEffect.IsTiltEnabled="True"
-    d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=nationalRail:SampleData}">
+    d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=Trains:SampleData}">
 
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
